// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`skeleton > renders correctly with type="block" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      class="styles__vd0uwv1"
    >
      <ul
        class="stylesVariants__1niawa24"
      >
        <li
          class="stylesVariants__1niawa23"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </li>
        <li
          class="stylesVariants__1niawa23"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </li>
        <li
          class="stylesVariants__1niawa23"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </li>
      </ul>
      <div
        class="styles__vd0uwv2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton > renders correctly with type="blocks" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      class="styles__vd0uwv1"
    >
      <div
        class="stylesVariants__1niawa25"
        style="--_1niawa20: 4;"
      >
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
      </div>
      <div
        class="styles__vd0uwv2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton > renders correctly with type="box" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      class="styles__vd0uwv1"
    >
      <div
        class="stylesVariants__1niawa25"
        style="--_1niawa20: 4;"
      >
        <div
          class="stylesVariants__1niawa27"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa27"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa27"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa27"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa27"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa27"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa27"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa27"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
      </div>
      <div
        class="styles__vd0uwv2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton > renders correctly with type="donut" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      class="styles__vd0uwv1"
    >
      <div
        class="stylesVariants__1niawa28"
      >
        <svg
          class="stylesVariants__1niawa29"
        >
          <title>
            donut skeleton
          </title>
          <circle
            class="stylesVariants__1niawa2a"
            cx="6.4375rem"
            cy="6.4375rem"
            r="90"
          />
        </svg>
        <ul
          class="stylesVariants__1niawa2b"
        >
          <li>
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
          </li>
          <li>
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
          </li>
          <li>
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
          </li>
          <li>
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
          </li>
        </ul>
      </div>
      <div
        class="styles__vd0uwv2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton > renders correctly with type="line" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      class="styles__vd0uwv1"
    >
      <div
        class="stylesVariants__1niawa2d"
        style="--_1niawa21: 7.5rem;"
      />
      <div
        class="styles__vd0uwv2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton > renders correctly with type="list" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      class="styles__vd0uwv1"
    >
      <ul
        class="stylesVariants__1niawa2g"
      >
        <li
          class="stylesVariants__1niawa2e"
        >
          <div
            class="stylesVariants__1niawa2f"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
          </div>
          <div
            class="stylesVariants__1niawa2f"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
          </div>
          <div
            class="stylesVariants__1niawa2f"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
          </div>
        </li>
        <li
          class="stylesVariants__1niawa2e"
        >
          <div
            class="stylesVariants__1niawa2f"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
          </div>
          <div
            class="stylesVariants__1niawa2f"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
          </div>
          <div
            class="stylesVariants__1niawa2f"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
          </div>
        </li>
        <li
          class="stylesVariants__1niawa2e"
        >
          <div
            class="stylesVariants__1niawa2f"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
          </div>
          <div
            class="stylesVariants__1niawa2f"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
          </div>
          <div
            class="stylesVariants__1niawa2f"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
          </div>
        </li>
      </ul>
      <div
        class="styles__vd0uwv2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton > renders correctly with type="slider" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      class="styles__vd0uwv1"
    >
      <div
        class="stylesVariants__1niawa2h"
        style="--_1niawa22: 4;"
      >
        <div
          class="stylesVariants__1niawa2i"
        >
          <div
            class="stylesVariants__1niawa2j"
          />
        </div>
        <div
          class="stylesVariants__1niawa2i"
        >
          <div
            class="stylesVariants__1niawa2j"
          />
        </div>
        <div
          class="stylesVariants__1niawa2i"
        >
          <div
            class="stylesVariants__1niawa2j"
          />
        </div>
        <div
          class="stylesVariants__1niawa2i"
        >
          <div
            class="stylesVariants__1niawa2j"
          />
        </div>
      </div>
      <div
        class="styles__vd0uwv2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton > renders correctly with type="square" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      class="styles__vd0uwv1"
    >
      <div
        class="stylesVariants__1niawa2k"
      />
      <div
        class="styles__vd0uwv2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton > renders default variant 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      class="styles__vd0uwv1"
    >
      <div
        class="stylesVariants__1niawa25"
        style="--_1niawa20: 4;"
      >
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
        <div
          class="stylesVariants__1niawa26"
        >
          <div
            class="stylesVariants__1niawa2c"
          />
          <div
            class="stylesVariants__1niawa2d"
            style="--_1niawa21: 7.5rem;"
          />
        </div>
      </div>
      <div
        class="styles__vd0uwv2"
      />
    </div>
  </div>
</DocumentFragment>
`;
